tests/ui/linkage-attr/raw-dylib/windows/import-name-type-invalid-format.stderr
error[E0539]: malformed `link` attribute input
  --> $DIR/import-name-type-invalid-format.rs:9:1
   |
LL | #[link(name = "foo", kind = "raw-dylib", import_name_type = 6)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^--------------------^^
   |                                          |
   |                                          expected this to be of the form `import_name_type = "..."`
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/items/external-blocks.html#the-link-attribute>

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0539`.
